<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/biru_1"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".latihansharedpreference.LoginActivity">

    <LinearLayout
        android:id="@+id/atas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_child_friendly" />
        <TextView
            android:id="@+id/txt_atas1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/atas1"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/txt_atas2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/atas2"
            android:textColor="@android:color/white"
            android:textSize="14dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tengah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:textStyle="bold" />
        <View
            android:layout_width="20dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="#ffffff" />
        <EditText
            android:id="@+id/edt_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@color/putih"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/putih"
            android:textColorHint="@color/putih"
            android:textCursorDrawable="@drawable/warna_cursor"
            android:textSize="14dp" />
        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@color/putih"
            android:hint="@string/password"
            android:imeActionId="6"
            android:imeActionLabel="Sign In"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/putih"
            android:textColorHint="@color/putih"
            android:textCursorDrawable="@drawable/warna_cursor"
            android:textSize="14dp" />
        <TextView
            android:id="@+id/txt_lupa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="right"
            android:text="@string/lupa"
            android:textColor="@color/putih" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bawah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tengah"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_login_masuk"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/tmbl_masuk"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/masuk"
            android:textColor="@color/putih"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txt_login_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center_horizontal"
            android:text="@string/register_2"
            android:textColor="@color/putih" />
    </LinearLayout>

</RelativeLayout>