<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/atas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/biru_1"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".latihansharedpreference.HomeActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_child_friendly" />
    <TextView
        android:id="@+id/txt_atas1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@id/logo"
        android:text="@string/atas1"
        android:textSize="20dp"
        android:textColor="@color/putih"
        android:textStyle="italic" />
    <TextView
        android:id="@+id/txt_atas2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@id/logo"
        android:layout_below="@id/txt_atas1"
        android:text="@string/atas2"
        android:textSize="14dp"
        android:textColor="@color/putih"/>
    <TextView
        android:id="@+id/txt_Hallo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_atas2"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/hallo"
        android:textColor="@color/putih"
        android:textSize="16dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtHallo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_atas2"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text="@string/hallo"
        android:textColor="@color/putih"
        android:textSize="16dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHallo"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/putih"
        android:textSize="16dp"
        android:textStyle="bold" />
    <View
        android:layout_below="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:background="#ffffff" />
    <TextView
        android:id="@+id/txt_logout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/tmbl_masuk"
        android:clickable="true"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/keluar"
        android:textColor="@color/putih"
        android:textStyle="bold" />

</RelativeLayout>